// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package protobuf.contrib.j2cl.protos;

import "third_party/java_src/j2cl_proto/java/com/google/protobuf/contrib/j2cl/options/js_enum.proto";

option java_package = "com.google.protobuf.contrib.j2cl.protos";

// REMOVED_BY_GENRULE option java_multiple_files = true;

enum EnumWithAliases {
  option allow_alias = true;

  UNKNOWN = 0;
  ORIGINAL = 1;
  ALIAS = 1;
}

enum NativeEnumWithAliases {
  option (contrib.j2cl.options.generate_js_enum) = true;
  option allow_alias = true;

  DEFAULT = 0;
  NATIVE_ORIGINAL = 1;
  NATIVE_ALIAS = 1;
}
