syntax = "proto2";

package protobuf.contrib.j2cl.protos;

option java_package = "com.google.protobuf.contrib.j2cl.protos";

// REMOVED_BY_GENRULE option java_multiple_files = true;

import "java/com/google/protobuf/contrib/j2cl/options/js_enum.proto";

message MainMessage {
  enum NestedNativeEnum {
    option (contrib.j2cl.options.generate_js_enum) = true;

    UNKNOWN = 0;
    ONE = 1;
    TWO = 2;
    THREE = 3;
    FOUR = 4;
    FIVE = 5;
    SIX = 6;
  }

  optional TopLevelNativeEnum top_level_native_enum = 1;

  optional NestedNativeEnum nested_native_enum = 2;

  repeated TopLevelNativeEnum repeated_top_level_native_enum = 3;

  extensions 100 to 299;
}

enum TopLevelNativeEnum {
  option (contrib.j2cl.options.generate_js_enum) = true;

  UNKNOWN = 0;
  ONE = 1;
  TWO = 2;
  THREE = 3;
  FOUR = 4;
  FIVE = 5;
  SIX = 6;
}

extend MainMessage {
  optional TopLevelNativeEnum top_level_native_enum = 100;
  repeated TopLevelNativeEnum repeated_top_level_native_enum = 101;
}
